--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -1,4 +1,11 @@
 <html>
-    <script src="Libraries/p5/p5.min.js"></script>
-    <script src="GameModules/Game.js"></script>
+    <head>
+
+    </head>
+    <body>    
+        <script src="Libraries/p5/p5.min.js"></script>
+        <script src="GameModules/Game.js"></script>
+        <script src="GameObjects/Bird.js"></script>
+        <script src="GameObjects/Sprite.js"></script>
+    </body>
 </html>
