--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -7,5 +7,7 @@
         <script src="GameModules/Game.js"></script>
         <script src="GameObjects/Bird.js"></script>
         <script src="GameObjects/Sprite.js"></script>
+        <script src="GameObjects/PipeSet.js"></script>
+        <script src="Libraries/p5/p5.sound.min.js"></script>
     </body>
 </html>
