--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -8,6 +8,8 @@
         <script src="GameObjects/Bird.js"></script>
         <script src="GameObjects/Sprite.js"></script>
         <script src="GameObjects/PipeSet.js"></script>
+        <script src="WorldObjects/Backdrop.js"></script>
+        <script src="WorldObjects/Ground.js"></script>
         <script src="Libraries/p5/p5.sound.min.js"></script>
     </body>
 </html>
