Update JavaScript port

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -1,15 +1,14 @@
 <html>
     <head>
-
     </head>
-    <body>    
-        <script src="Libraries/p5/p5.min.js"></script>
-        <script src="GameModules/Game.js"></script>
-        <script src="GameObjects/Bird.js"></script>
-        <script src="GameObjects/Sprite.js"></script>
-        <script src="GameObjects/PipeSet.js"></script>
-        <script src="WorldObjects/Backdrop.js"></script>
-        <script src="WorldObjects/Ground.js"></script>
-        <script src="Libraries/p5/p5.sound.min.js"></script>
+    <body>
+        <script type="text/javascript" src="Libraries/p5/p5.min.js"></script>
+        <script type="text/javascript" src="GameModules/Game.js"></script>
+        <script type="text/javascript" src="GameObjects/Bird.js"></script>
+        <script type="text/javascript" src="GameObjects/Sprite.js"></script>
+        <script type="text/javascript" src="GameObjects/PipeSet.js"></script>
+        <script type="text/javascript" src="WorldObjects/Backdrop.js"></script>
+        <script type="text/javascript" src="WorldObjects/Ground.js"></script>
+        <script type="text/javascript" src="WorldObjects/Scoreboard.js"></script>    
     </body>
 </html>
