Update JavaScript game code
+ Updated game logic
+ Updated assests

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -2,13 +2,14 @@
     <head>
     </head>
     <body>
-        <script type="text/javascript" src="Libraries/p5/p5.min.js"></script>
-        <script type="text/javascript" src="GameModules/Game.js"></script>
-        <script type="text/javascript" src="GameObjects/Bird.js"></script>
-        <script type="text/javascript" src="GameObjects/Sprite.js"></script>
-        <script type="text/javascript" src="GameObjects/PipeSet.js"></script>
-        <script type="text/javascript" src="WorldObjects/Backdrop.js"></script>
-        <script type="text/javascript" src="WorldObjects/Ground.js"></script>
-        <script type="text/javascript" src="WorldObjects/Scoreboard.js"></script>    
+        <script type="text/javascript" src="./Libraries/p5/p5.min.js"></script>
+        <script type="text/javascript" src="./Libraries/p5/p5.sound.min.js"></script>    
+        <script type="text/javascript" src="./GameObjects/Sprite.js"></script>
+        <script type="text/javascript" src="./WorldObjects/Backdrop.js"></script>
+        <script type="text/javascript" src="./WorldObjects/Ground.js"></script>
+        <script type="text/javascript" src="./GameObjects/Bird.js"></script>
+        <script type="text/javascript" src="./GameObjects/PipeSet.js"></script>
+        <script type="text/javascript" src="./WorldObjects/Scoreboard.js"></script>
+        <script type="text/javascript" src="./GameModules/Game.js"></script>
     </body>
 </html>
